policies/allow-get-block-post.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-get-block-post
spec:
  endpointSelector:
    matchLabels:
      app: backend-service
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: frontend-service
      toPorts:
        - ports:
            - port: '80'
              protocol: 'TCP'
            - port: '443'
              protocol: 'TCP'
          rules:
            http:
              - method: GET
  egress:
    - toEndpoints:
      - matchLabels:
          app: frontend-service
