policies/deny-all.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: deny-all
  namespace: tenant-a
spec:
  endpointSelector: {}
  ingressDeny:
  - {}
  egressDeny:
  - {}
