policies/only-http-from-frontend.yaml
apiVersion: cilium.io/v2 
kind: CiliumNetworkPolicy
metadata:
  name: only-http-from-frontend
spec:
  endpointSelector: 
    matchLabels:
      app: frontend-service
  egress:
    - toEndpoints:
        - matchLabels:
            app: backend-service
      toPorts:
        - ports:
          - port: '80'
            protocol: 'TCP'
          - port: '443'
            protocol: 'TCP'
